# Ray-Tracing-Gems-II

./: LICENSE.txt  README.md  errata.md
Chapter 16/code/shared_sources/: CMakeLists.txt  CMakeLists_include.txt  NvFoundation.h  README.md  docgen.lua  nvpsystem_win32.cpp  nvpwindow.hpp  resources.h  resources.rc
Chapter 16/code/shared_sources/GL/: glcustom.h  glsubset.h  wgl.h
Chapter 16/code/shared_sources/cmake/: FindAntTweakBar.cmake  FindDirectX12.cmake  FindOpenVRSDK.cmake  FindVulkanSDK.cmake
Chapter 16/code/shared_sources/fileformats/: json.hpp  nv_dds.h  tiny_gltf_freeimage.h  tiny_obj_loader.h
Chapter 16/code/shared_sources/imgui/: imgui_camera_widget.cpp  imgui_camera_widget.h  imgui_impl_gl.h  imgui_impl_vk.cpp  imgui_impl_vk.h  imgui_internal.h  imgui_orient.h
Chapter 16/code/shared_sources/nvgl/: README.md  appwindowprofiler_gl.cpp  appwindowprofiler_gl.hpp  contextwindow_gl.cpp  error_gl.hpp  extensions_gl.cpp  extensions_gl.hpp  extensions_gl.lua  glsltypes_gl.hpp  profiler_gl.cpp  profiler_gl.hpp  programmanager_gl.hpp
Chapter 16/code/shared_sources/nvh/: README.md  alignment.hpp  bitarray.cpp  cameracontrol.hpp  camerainertia.hpp  cameramanipulator.cpp  geometry.hpp  gltfscene.cpp  inputparser.h  nvprint.hpp  parametertools.hpp  shaderfilemanager.cpp
Chapter 16/code/shared_sources/nvmath/: nvmath_glsltypes.h  nvmath_hlsltypes.h
Chapter 16/code/shared_sources/nvvk/: README.md  allocator_dma_vkgl.hpp  allocator_vma_vk.hpp  appwindowprofiler_vk.hpp  commands_vk.hpp  context_vk.hpp  debug_util_vk.cpp  descriptorsets_vk.cpp  extensions_vk.hpp  gizmos_vk.cpp  gizmos_vk.hpp  images_vk.cpp  images_vk.hpp  memorymanagement_vk.cpp  memorymanagement_vkgl.cpp  memorymanagement_vkgl.hpp  pipeline_vk.hpp  profiler_vk.hpp  raytraceNV_vk.hpp  renderpasses_vk.cpp  renderpasses_vk.hpp  samplers_vk.cpp  samplers_vk.hpp  structs_vk.lua  swapchain_vk.hpp
Chapter 20/code/: CMakeLists.txt  direct_light.h  functions.h  material_lambert.h  material_rough.h  pathtrace.h  pathtrace_mis.h  program_defs.h  sample_lights.h  sample_lights_pdf.h
Chapter 39/code/owl/owl/: APIContext.cpp  APIHandle.cpp  Buffer.cpp  CMakeLists.txt  Context.h  DeviceContext.h  Geometry.h  Module.h  RegisteredObject.cpp  Texture.cpp  Triangles.cu  TrianglesGeomGroup.cpp  UserGeom.h  UserGeomGroup.cpp  UserGeomGroup.h  impl.cpp
Chapter 39/code/owl/samples/: CMakeLists.txt
Chapter 39/code/owl/tests/: CMakeLists.txt
Chapter_16/: .clang-format  CMakeLists.txt  LICENSE  common.h  main.cpp
Chapter_16/shaders/: ao.rgen  ao.rmiss  desktop.ini
Chapter_16/shared_external/Freeimage/: README.md
Chapter_16/shared_external/NSight/: README.md  nvToolsExt64_1.lib
Chapter_16/shared_external/glfw3/lib-vc2015/: glfw3.lib
Chapter_16/shared_external/zlib/: README.md
Chapter_16/shared_external/zlib/lib64-vc2015/: zlib.lib
Chapter_16/shared_external/zlib/lib64-vc2017/: zlibstatic.lib
Chapter_16/shared_external/zlib/lib64-vc2019/: zlibstatic.lib
Chapter_16/shared_sources/: .gitignore  include_gl.h  nvpsystem.cpp  nvpsystem.hpp  nvpsystem_linux.cpp  nvpwindow.cpp  platform.h
Chapter_16/shared_sources/cmake/: FindDirectX11.cmake  FindFreeImage.cmake  FindNVML.cmake  FindOculusSDK.cmake  FindOpenCL.cmake  FindOptix.cmake  FindVMA.cmake  FindZLIB.cmake
Chapter_16/shared_sources/fileformats/: bmp.hpp  cadscenefile.cpp  cadscenefile.h  cgltf.cpp  nv_dds.cpp  tiny_gltf.h
Chapter_16/shared_sources/imgui/: imgui.h  imgui_helper.cpp  imgui_helper.h  imgui_impl_gl.cpp  imgui_orient.cpp  imgui_widgets.cpp
Chapter_16/shared_sources/noise/: mersennetwister1.h  noise1234.cpp
Chapter_16/shared_sources/nvgl/: base_gl.hpp  contextwindow_gl.hpp  error_gl.cpp  programmanager_gl.cpp
Chapter_16/shared_sources/nvh/: appwindowcamerainertia.hpp  appwindowprofiler.cpp  appwindowprofiler.hpp  bitarray.hpp  cameramanipulator.hpp  filemapping.cpp  filemapping.hpp  fileoperations.hpp  gltfscene.hpp  misc.hpp  nsightevents.h  nvprint.cpp  parametertools.cpp  profiler.cpp  profiler.hpp  radixsort.hpp  shaderfilemanager.hpp  timesampler.hpp  trangeallocator.hpp
Chapter_16/shared_sources/nvmath/: nvmath.h  nvmath.inl  nvmath_types.h
Chapter_16/shared_sources/nvvk/: allocator_dedicated_vk.hpp  allocator_dma_vk.hpp  allocator_dma_vkgl.cpp  allocator_vk.hpp  appbase_vkpp.hpp  appwindowprofiler_vk.cpp  buffers_vk.hpp  commands_vk.cpp  context_vk.cpp  debug_util_vk.hpp  descriptorsets_vk.hpp  error_vk.cpp  error_vk.hpp  extensions_vk.cpp  extensions_vk.lua  memorymanagement_vk.hpp  pipeline_vk.cpp  profiler_vk.cpp  raytraceKHR_vk.hpp  shadermodulemanager_vk.cpp  shadermodulemanager_vk.hpp  shaders_vk.hpp  structs_vk.hpp  swapchain_vk.cpp
Chapter_39/: CMakeLists.txt  Renderer.cpp  Renderer.h  deviceCode.cu  hdri.h  mesh.h  tinyexr.h  viewer.cpp
Chapter_39/owl/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
Chapter_39/owl/owl/: APIContext.cpp  APIContext.h  APIHandle.cpp  APIHandle.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  DeviceContext.cpp  DeviceContext.h  DeviceMemory.h  Geometry.cpp  Group.cpp  Group.h  InstanceGroup.cpp  InstanceGroup.h  LaunchParams.cpp  LaunchParams.h  MissProg.cpp  MissProg.h  Module.cpp  Object.cpp  Object.h  ObjectRegistry.cpp  ObjectRegistry.h  RayGen.cpp  RayGen.h  RegisteredObject.h  SBTObject.cpp  SBTObject.h  Texture.cpp  Texture.h  Triangles.cu  Triangles.h  TrianglesGeomGroup.cpp  TrianglesGeomGroup.h  UserGeom.cu  UserGeomGroup.cpp  UserGeomGroup.h  (+4 more)
Chapter_39/owl/owl/cmake/: FindOptiX.cmake  FindTBB.cmake  configure_cuda.cmake  configure_embree.cmake  configure_glfw.cmake  configure_owl.cmake  configure_tbb.cmake
Chapter_39/owl/owl/helper/: cuda.h
Chapter_39/owl/samples/: CMakeLists.txt
Chapter_39/owl/samples/advanced/: CMakeLists.txt
Chapter_39/owl/samples/cmdline/: CMakeLists.txt
Chapter_39/owl/samples/common/: CMakeLists.txt
Chapter_39/owl/samples/interactive/: CMakeLists.txt
Chapter_39/owl/tests/: CMakeLists.txt
Chapter_39/owl/tests/owl-as-subdirectory/: CMakeLists.txt
Chapter_39/owl/tests/t01-many-spheres/: GeomTypes.h  (+3 more)
(+333 files in other folders)
